--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -58,5 +58,78 @@
   "tokenomics.para3": "생태계에서 미친 원숭이 궁예의 공급을 줄이는 궁예왕를 발행하면 원래의 미친 궁예가 불타게 됩니다.",
   "tokenomics.para4": "미친 궁예 또는 킹궁이e의 이름과 약력을 변경하는 데에도 사용할 수 있습니다. '마구니'와 같은 미니 게임과 같은 미래의 유틸리티가 녹음실에 제공됩니다. 이 게임에 참여하면 보상을 받을 수 있습니다.",
   "tokenomics.para5": "  미친 원숭이 궁예에서 사용할 수 있는 상품 또는 서비스를 얻기 위한 방법으로만 설계되고 의도된 유틸리티 토큰입니다.",
-  "tokenomics.para5h2": "투기적이거나 다른 방식으로 이익을 창출하기 위한 것이 아니며 투자가 아니며 경제적 가치가 없습니다."
+  "tokenomics.para5h2": "투기적이거나 다른 방식으로 이익을 창출하기 위한 것이 아니며 투자가 아니며 경제적 가치가 없습니다.",
+
+
+
+  "Staking.1": "스테이킹",
+  "staking.parah1": "Crazy Ape Goongye를 스테이킹할 수 있다고 발표한 후 우리는 사람들이 이 기능에 매우 관심이 있다는 긍정적인 피드백을 많이 받았습니다. 그렇다면 Crazy Ape Goongye를 어떻게 스테이킹하고 어떤 이점이 있습니까?",
+  "staking.parah2": "스테이킹 기능은 Crazy Ape Goongye NFT를 발행하는 즉시 사용할 수 있습니다. 소유자는 결정에 따라 일정 기간 동안 Crazy Ape Goongye를 스테이킹할 수 있으며 다음과 같은 보상을 받습니다.",
+  "staking.MAGUNI": "마구니",
+  "staking.tokens": "토큰",
+  "staking.day": "하루에.",
+  "staking.parah3": "Crazy Ape Goongye를 사용할수록 더 많이",
+  "staking.parah4": "당신은 받게됩니다. 당신은 또한 레벨 업하고 King Ape Goongye를 주조하기 위해 진화할 수 있습니다. King Ape Goongye FT도 스테이킹이 가능하며 소유자는 다음 비율로 2.5배 더 많은 보상을 받습니다.",
+
+  "nftCarousel.1": "Crazy APE GOONGYE NFT",
+  "nftCarousel.2": "오픈씨",
+
+  "mint.1": "민트",
+   "mint.li1": "NFT를 발행하려면 Wallet을 연결해야 합니다.",
+   "mint.li2": "거래는 연결된 지갑을 통해 이루어집니다.",
+   "mint.li3": "거래를 할 때 가스 요금을 지불하려면 KLAYTN이 있어야 합니다.",
+   "mint.li4": "거래당 발행 수는 각 판매 라운드에 따라 설정됩니다.",
+   "mint.h3": "당신의 원숭이 Goongyes를 박하",
+   "mint.para1": "여기에 발행할 카드의 수를 입력하십시오.",
+   "mint.Remaining": "남은",
+   "mint.price": "카드당 가격",
+   "mint.Each": "민트.각",
+   "mint.max": "최대",
+   "mint.Total": "총",
+   "mint.KLAY": "클레이",
+   "mint.Wallet": "지갑 연결",
+   "mint.Mint": "지금 민트 앤 스테이크",
+
+   "Roadmap.1": "로드맵",
+   "roadmap.parah1": "원숭이의 웹사이트를 펜으로,",
+   "roadmap.Goongye": "궁예",
+   "roadmap.parah2": "처음부터 세 번째로 시작",
+   "roadmap.presale": "사전 판매",
+   "roadmap.prize": "경품 추첨",
+   "roadmap.parah3": "1차부터 3차까지 매 회 매진 시 제공됩니다.",
+   "roadmap.Start": "시작",
+   "roadmap.parah4" : "유튜브 채널, 블로그, 언론보도",
+   "roadmap.parah5": "에어드랍 (of) APE Goongye Printy Transport Card to",
+   "roadmap.People": "100명",
+   "roadmap.Tokenomics": "토큰노믹스",
+   "roadmap.parah6": "3차 선판매 완료 후 발매 예정",
+   "roadmap.Open":"열려 있는",
+   "roadmap.parah7":"주조 및 스테이킹",
+   "roadmap.parah8":"기능(또는 발행 및 스테이킹 기능 열기)",
+   "roadmap.Purchase":"구매",
+   "roadmap.parah9":"샌드박스의 땅",
+   "roadmap.parah10":"디센트럴랜드 메타버스",
+   "roadmap.parah11":"빌보드에 광고하기",
+   "roadmap.parah12":"영등포 타임스퀘어",
+   "roadmap.parah13":"를 위한 로고송 제작",
+   "roadmap.GoongyeApe":"궁예원숭이",
+   "roadmap.parah14":"or 궁예에이프 로고송 만들기",
+   "roadmap.Add":"추가하다",
+   "roadmap.governance":"거버넌스 기능",
+   "roadmap.parah15":"웹사이트로",
+   "roadmap.conduct":"우리는 수행",
+   "roadmap.parah16":"소셜 네트워킹의 AMA",
+   "roadmap.parah17":"유튜브, 텔레그램, 카카오톡 등의 서비스를 제공합니다.",
+   "roadmap.parah18":"게임 드레스",
+   "roadmap.Issue":"문제",
+   "roadmap.NFT":"3D NFT",
+   "roadmap.parah19":"보유자 혜택(체인 미정)",
+   "roadmap.parah20":"오프라인 멤버십 이벤트 진행",
+   "roadmap.parah21":"APE 궁예클럽",
+   "roadmap.parah22": "올해 연말에",
+   "roadmap.parah23":"더 큰 생태계 확장 공개(로드맵 2.0)"
+
+
+
+
 }
