--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -59,5 +59,77 @@
   "tokenomics.para3": "Your original Crazy Goongye gets burned when you mint an King Goongye which will lessen the supply of Crazy Ape Goongye in the ecosystem.",
   "tokenomics.para4": "can also be used to change the name and bio of your Crazy Goongye or King Goongye. There are future utilities coming to the Rec Room such as mini games like 'Maguni' . By participating in these games you will be able to receive rewards.",
   "tokenomics.para5": "  is the utility token designed and intended solely as a method to obtain goods or services available at the Crazy Ape Goongye.",
-  "tokenomics.para5h2": "are not intended to generate profit, speculative or otherwise, and is NOT an investment and has NO economic value."
+  "tokenomics.para5h2": "are not intended to generate profit, speculative or otherwise, and is NOT an investment and has NO economic value.",
+
+
+
+
+  "Staking.1": "Staking",
+  "staking.parah1": "After announcing that you can stake your Crazy Ape Goongye we received a lot of positive feedback showing that people are very interested in this feature. So, how do you stake your Crazy Ape Goongye and what benefits does it bring?",
+  "staking.parah2": "The Staking feature will be available immediately upon mint of your Crazy Ape Goongye NFT. Owners can stake their Crazy Ape Goongye for any period of time depending on their decision and will receive a reward of",
+  "staking.MAGUNI": "MAGUNI",
+  "staking.tokens": "tokens",
+  "staking.day": "per day.",
+  "staking.parah3": "The more Crazy Ape Goongye you use to stake the more",
+  "staking.parah4": "you will receive. You can also evolve to level up and mint an King Ape Goongye. King Ape Goongye FTs will also be available to stake and owners will receive 2.5 times more rewards, at the rate of",
+
+
+  "nftCarousel.1": "CRAZY APE GOONGYE NFT",
+  "nftCarousel.2": "OpenSea",
+
+
+  "mint.1": "Mint",
+   "mint.li1": "You MUST connect a Wallet to mint NFTs.",
+   "mint.li2": "Transactions will be done via the connected wallet.",
+   "mint.li3": "You MUST have KLAYTN to pay gas fee when it comes to make transactions.",
+   "mint.li4": "The number of mints per transaction is set according to each sales round.",
+   "mint.h3": "Mint your Ape Goongyes",
+   "mint.para1": "Enter how many card you'd like to mint here.",
+   "mint.Remaining": "Remaining",
+   "mint.price": "Price Per Card",
+   "mint.Each": "mint.Each",
+   "mint.max": "max",
+   "mint.Total": "Total",
+   "mint.KLAY": "KLAY",
+   "mint.Wallet": "Connect Wallet",
+   "mint.Mint": "Mint & Stake Now",
+
+   "Roadmap.1": "Roadmap",
+   "roadmap.parah1": "pen the website of the ape,",
+   "roadmap.Goongye": "Goongye",
+   "roadmap.parah2": "Startfirst to third",
+   "roadmap.presale": "pre-sale",
+   "roadmap.prize": "A prize draw",
+   "roadmap.parah3": "will be provided when the tickets are sold out for each of the first to third rounds.",
+   "roadmap.Start": "Start",
+   "roadmap.parah4" : "a YouTube channel, blog,and sending to the press",
+   "roadmap.parah5": "Airdrops (of) APE Goongye Printy Transportation Card to",
+   "roadmap.People": "100 People",
+   "roadmap.Tokenomics": "Tokenomics",
+   "roadmap.parah6": "will be released after the 3rd pre-sale is completed",
+   "roadmap.Open":"Open",
+   "roadmap.parah7":"minting and staking",
+   "roadmap.parah8":"function (or Open the function of minting and staking)",
+   "roadmap.Purchase":"Purchase the",
+   "roadmap.parah9":"land of Sandbox",
+   "roadmap.parah10":"and Decentraland metaverse",
+   "roadmap.parah11":"Advertise on the billboard",
+   "roadmap.parah12":"of Yeongdeungpo Times Square",
+   "roadmap.parah13":"Produce a logo song for",
+   "roadmap.GoongyeApe":"Goongye APE",
+   "roadmap.parah14":"or Make a logo song for Gungye APE",
+   "roadmap.Add":"Add",
+   "roadmap.governance":"governance function",
+   "roadmap.parah15":"to the website",
+   "roadmap.conduct":"We conduct",
+   "roadmap.parah16":"AMA on social networking",
+   "roadmap.parah17":"services such as YouTube, Telegram, and Kakao Talk.",
+   "roadmap.parah18":"Maguni Game",
+   "roadmap.Issue":"Issue",
+   "roadmap.NFT":"3D NFT",
+   "roadmap.parah19":"to benefit holders (chain undecided)",
+   "roadmap.parah20":"Hold an offline membership event for",
+   "roadmap.parah21":"APE Goongye Club",
+   "roadmap.parah22": "at the end of the year",
+   "roadmap.parah23":"Unveil a larger ecosystem expansion (Roadmap 2.0)"
 }
