--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,7 +18,7 @@
   "stroy.background": "BACKGROUND",
   "stroy.paraback1": "When the Goongye was still in his human form, he was a ruthless tyrant that led his people to victory. His country overcame war against various enemies through the use of deadly force and objective decisions. The Goongye showed no mercy to his enemies but was a good ally to his friends. He never abandoned a partner in battle nor let his worst enemies survive a fight. As he gained more knowledge to understand the world and become more powerful, he came upon the forbidden book – The Necronomicon.",
   "stroy.paraback2": "The Goongye was thirsty for knowledge and power which led him to ignore the warnings of his council and read the forbidden book. He spent weeks in his room, reading and analyzing each page and text. When he emerged from his weeks of seclusion, he was not a man anymore. He has become the Ape Goongye; a higher being that values reason and objectivity beyond anything else.",
-  "story.story": "story",
+  "story.story": "Storry",
   "story.parastory1": "While the Ape Goongye has acquired knowledge beyond the understanding of man, the world has fallen into a war between the Eastern and Western countries. Since the Ape Goongye is from the east, he then prepares to help his allies win the war.",
   "story.parastory2": "However, reading the Necronomicon has made the Ape Goongye less of a tyrant and more of a peace-keeper. While he wants to secure the power of his country, he does not want to destroy the Western countries or harm innocent civilians.",
   "story.parastory3": "Since some of the Goongye’s allies preferred the ruthless tyrant, they are having trouble working with the changed Ape Goongye.",
