Translated stake.js

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -131,5 +131,62 @@
    "roadmap.parah20":"Hold an offline membership event for",
    "roadmap.parah21":"APE Goongye Club",
    "roadmap.parah22": "at the end of the year",
-   "roadmap.parah23":"Unveil a larger ecosystem expansion (Roadmap 2.0)"
+   "roadmap.parah23":"Unveil a larger ecosystem expansion (Roadmap 2.0)",
+
+   "team.para1":"The Team",
+   "team.para2":"The Artist",
+   "team.para3":"Blockchain Dev",
+   "team.para4":"Web Design",
+   "team.para5":"Community",
+
+   "staking.para1":"Staking",
+   "staking.para2":"Stake All",
+   "staking.para3":"Claim All Reward",
+   "staking.para4":"MAGUNI Balance",
+   "staking.para5":"My Crazy Ape Goongye",
+   "staking.para6":"Crazy Ape Goongye #101",
+   "staking.para7":"Daily Reward",
+   "staking.para8":"The Crazy Ape Goongye Club is an ecosystem on the blockchain populated by theruthless tyrant. a limited series of 10,000 NFT.The $MAGUNI token is the utility that powers the CAGC ecosystem.",
+   "staking.para9":"Stake",
+   "staking.para10":"Change Name",
+   "staking.para11":"Change Bio",
+   "staking.para12":"Crazy Ape Goongye #101",
+   "staking.para13":"Daily Reward",
+   "staking.para14":"The Crazy Ape Goongye Club is an ecosystem on the blockchain populated by theruthless tyrant. a limited series of 10,000 NFT .The $MAGUNI token is the utility that powers the CAGC ecosystem.",
+   "staking.para15":"Stake",
+   "staking.para16":"Change Name",
+   "staking.para17":"Change Bio",
+   "staking.para18":"Staked Crazy Ape Goongye",
+   "staking.para19":"Crazy Ape Goongye",
+   "staking.para20":"Daily Reward",
+   "staking.para21":"The Crazy Ape Goongye Club is an ecosystem on the blockchain populated by theruthless tyrant. a limited series of 10,000 NFT.The $MAGUNI token is the utility that powers the CAGC ecosystem.",
+   "staking.para22":"Stake",
+   "staking.para23":"Change Name",
+   "staking.para24":"Change Bio",
+   "staking.para25":"Crazy Ape Goongye #101",
+   "staking.para26":"Daily Reward",
+   "staking.para27":"The Crazy Ape Goongye Club is an ecosystem on the blockchain populated by theruthless tyrant. a limited series of 10,000 NFT.The $MAGUNI token is the utility that powers the CAGC ecosystem.",
+   "staking.para28":"Stake",
+   "staking.para29":"Change Name",
+   "staking.para30":"Change Bio",
+   "staking.para31":"Staked King Ape Goongye",
+   "staking.para32":"Crazy Ape Goongye #101",
+   "staking.para33":"Daily Reward",
+   "staking.para34":"  The Crazy Ape Goongye Club is an ecosystem on the blockchain populated by theruthless tyrant. a limited series of 10,000 NFT.The $MAGUNI token is the utility that powers the CAGC ecosystem.",
+   "staking.para35":"Stake",
+   "staking.para36":"Change Name",
+   "staking.para37":"Change Bio",
+   "staking.para38":"Crazy Ape Goongye #101",
+   "staking.para39":"Daily Reward",
+   "staking.para41":"The Crazy Ape Goongye Club is an ecosystem on the blockchain populated by theruthless tyrant. a limited series of 10,000 NFT.The $MAGUNI token is the utility that powers the CAGC ecosystem.",
+   "staking.para42":"Stake",
+   "staking.para43":"Change Name",
+   "staking.para44":"Change Bio"
+
+
+
+
+
+
+
 }
