--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -3,7 +3,7 @@
   "navbar.tokenomics": "토큰노믹스",
   "navbar.NFT": "엔피트",
   "navbar.mint": "민트",
-  "navbar.stake": "지분",
+  "navbar.말뚝": "지분",
   "navbar.roadmap": "로드맵",
   "navbar.team": "팀",
   "navbar.FAQ": "자주하는",
@@ -63,15 +63,15 @@
 
 
   "Staking.1": "스테이킹",
-  "staking.parah1": "Crazy Ape Goongye를 스테이킹할 수 있다고 발표한 후 우리는 사람들이 이 기능에 매우 관심이 있다는 긍정적인 피드백을 많이 받았습니다. 그렇다면 Crazy Ape Goongye를 어떻게 스테이킹하고 어떤 이점이 있습니까?",
-  "staking.parah2": "스테이킹 기능은 Crazy Ape Goongye NFT를 발행하는 즉시 사용할 수 있습니다. 소유자는 결정에 따라 일정 기간 동안 Crazy Ape Goongye를 스테이킹할 수 있으며 다음과 같은 보상을 받습니다.",
+  "staking.parah1": "미친 원숭이 궁예를 스테이킹할 수 있다고 발표한 후 우리는 사람들이 이 기능에 매우 관심이 있다는 긍정적인 피드백을 많이 받았습니다. 그렇다면 미친 원숭이 궁예를 어떻게 스테이킹하고 어떤 이점이 있습니까?",
+  "staking.parah2": "스테이킹 기능은 미친 원숭이 궁예 NFT를 발행하는 즉시 사용할 수 있습니다. 소유자는 결정에 따라 일정 기간 동안 미친 원숭이 궁예를 스테이킹할 수 있으며 다음과 같은 보상을 받습니다.",
   "staking.MAGUNI": "마구니",
   "staking.tokens": "토큰",
   "staking.day": "하루에.",
-  "staking.parah3": "Crazy Ape Goongye를 사용할수록 더 많이",
+  "staking.parah3": "미친 원숭이 궁예를 사용할수록 더 많이",
   "staking.parah4": "당신은 받게됩니다. 당신은 또한 레벨 업하고 King Ape Goongye를 주조하기 위해 진화할 수 있습니다. King Ape Goongye FT도 스테이킹이 가능하며 소유자는 다음 비율로 2.5배 더 많은 보상을 받습니다.",
 
-  "nftCarousel.1": "Crazy APE GOONGYE NFT",
+  "nftCarousel.1": "미친 원숭이 궁예 NFT",
   "nftCarousel.2": "오픈씨",
 
   "mint.1": "민트",
@@ -127,8 +127,57 @@
    "roadmap.parah20":"오프라인 멤버십 이벤트 진행",
    "roadmap.parah21":"APE 궁예클럽",
    "roadmap.parah22": "올해 연말에",
-   "roadmap.parah23":"더 큰 생태계 확장 공개(로드맵 2.0)"
+   "roadmap.parah23":"더 큰 생태계 확장 공개(로드맵 2.0)",
 
+   "team.para1" :"팀",
+   "team.para2":"아티스트",
+   "team.para3":"블록체인 개발",
+   "team.para4":"웹 디자인",
+   "team.para5":"지역 사회",
+
+   "staking.para1":"스테이킹",
+   "staking.para2":"모두 지분",
+   "staking.para3":"모든 보상 받기",
+   "staking.para4":"마구니 밸런스",
+   "staking.para5":"내 미친 원숭이 궁예",
+   "staking.para6":"미친 원숭이 궁예 #101",
+   "staking.para7":"일일 보상",
+   "staking.para8":"미친 원숭이 궁예 Club은 무자비한 폭군이 거주하는 블록체인의 생태계입니다. 10,000 NFT의 제한된 시리즈입니다. $MAGUNI 토큰은 CAGC 생태계를 구동하는 유틸리티입니다.",
+   "staking.para9":"말뚝",
+   "staking.para10":"이름을 바꿔라",
+   "staking.para11":"약력 변경",
+   "staking.para12":"미친 원숭이 궁예 #101",
+   "staking.para13":"일일 보상",
+   "staking.para14":"미친 원숭이 궁예 Club은 무자비한 폭군이 거주하는 블록체인의 생태계입니다. 10,000 NFT의 제한된 시리즈입니다. $MAGUNI 토큰은 CAGC 생태계를 구동하는 유틸리티입니다.",
+   "staking.para15":"말뚝",
+   "staking.para16":"이름을 바꿔라",
+   "staking.para17":"약력 변경",
+   "staking.para18":"말뚝d 미친 원숭이 궁예",
+   "staking.para19":"미친 원숭이 궁예",
+   "staking.para20":"일일 보상",
+   "staking.para21":"The 미친 원숭이 궁예 클럽은 무자비한 폭군이 거주하는 블록체인의 생태계입니다. 10,000 NFT의 제한된 시리즈입니다. $MAGUNI 토큰은 CAGC 생태계를 구동하는 유틸리티입니다.",
+   "staking.para22":"말뚝",
+   "staking.para23":"이름을 바꿔라",
+   "staking.para24":"약력 변경",
+   "staking.para25":"미친 원숭이 궁예 #101",
+   "staking.para26":"일일 보상",
+   "staking.para27":"The 미친 원숭이 궁예 클럽은 무자비한 폭군이 거주하는 블록체인의 생태계입니다. 10,000 NFT의 제한된 시리즈입니다. $MAGUNI 토큰은 CAGC 생태계를 구동하는 유틸리티입니다.",
+   "staking.para28":"말뚝",
+   "staking.para29":"이름을 바꿔라",
+   "staking.para30":"약력 변경",
+   "staking.para31":"말뚝d King Ape Goongye",
+   "staking.para32":"미친 원숭이 궁예 #101",
+   "staking.para33":"일일 보상",
+   "staking.para34":"  The 미친 원숭이 궁예 클럽은 무자비한 폭군이 거주하는 블록체인의 생태계입니다. 10,000 NFT의 제한된 시리즈입니다. $MAGUNI 토큰은 CAGC 생태계를 구동하는 유틸리티입니다.",
+   "staking.para35":"말뚝",
+   "staking.para36":"이름을 바꿔라",
+   "staking.para37":"약력 변경",
+   "staking.para38":"미친 원숭이 궁예 #101",
+   "staking.para39":"일일 보상",
+   "staking.para41":"The 미친 원숭이 궁예 클럽은 무자비한 폭군이 거주하는 블록체인의 생태계입니다. 10,000 NFT의 제한된 시리즈입니다. $MAGUNI 토큰은 CAGC 생태계를 구동하는 유틸리티입니다.",
+   "staking.para42":"말뚝",
+   "staking.para43":"이름을 바꿔라",
+   "staking.para44":"약력 변경"
 
 
 
