--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -180,5 +180,48 @@
    "staking.para44":"약력 변경"
 
 
+   "FAQ.1": "자주하는 질문",
+   "faq.parah1": "발행 사이트는 언제 발표됩니까?",
+   "faq.parah2": "총 발행량은 10,000개이며, 팀의 200개를 제외하고 9,800개가 발행됩니다.",
+   "faq.parah3":"총 발행량과 발행량은 얼마인가요?",
+   "faq.parah4":"The total issuance is 10,000 units, and 9,800 units will be minted excluding 200 units of the team.",
+   "faq.parah5":"발행 가격은 얼마이며 거래당 몇 개의 발행이 가능합니까?",
+   "faq.parah6":"The total issuance is 10,000 units, and 9,800 units will be minted excluding 200 units of the team.",
+   "faq.parah7": "어떻게 주조를 할 수 있습니까?",
+   "faq.parah8":"The total issuance is 10,000 units, and 9,800 units will be minted excluding 200 units of the team.",
+   "faq.parah9": "NFT 2차 로열티가 있습니까?",
+   "faq.parah10":"The total issuance is 10,000 units, and 9,800 units will be minted excluding 200 units of the team.",
+   "faq.parah11":"미친 원숭이 궁예가 뭐야?",
+   "faq.parah12":"The total issuance is 10,000 units, and 9,800 units will be minted excluding 200 units of the team.",
+   "faq.parah13":"몇 개의 NFT가 발행됩니까?",
+   "faq.parah14":"The total issuance is 10,000 units, and 9,800 units will be minted excluding 200 units of the team.",
+   "faq.parah15":"IPFS에서 호스팅됩니까?",
+   "faq.parah16":"The total issuance is 10,000 units, and 9,800 units will be minted excluding 200 units of the team.",
+   "faq.parah17":"Crazy Ape Goongye 화이트리스트 및 사전 판매가 있습니까?",
+   "faq.parah18":"The total issuance is 10,000 units, and 9,800 units will be minted excluding 200 units of the team.",
+   "faq.parah19":"앞으로 다른 캐릭터가 나올까요?",
+   "faq.parah20":"The total issuance is 10,000 units, and 9,800 units will be minted excluding 200 units of the team.",
+   "faq.parah21":"크레이지킹 궁예게임즈 개발 계획은 없나요?",
+   "faq.parah22":"The total issuance is 10,000 units, and 9,800 units will be minted excluding 200 units of the team.",
+   "faq.parah23":"팀 구성원이 공개되지 않는 이유는 무엇입니까?",
+   "faq.parah24":"The total issuance is 10,000 units, and 9,800 units will be minted excluding 200 units of the team.",
+
+
+
+   "footer.1":"COPYRIGHT 미친듯이궁예클럽. 판권 소유",
+
+
+   "Presales.1":"사전 판매",
+   "presale.connect":"연결하다",
+   "presale.li1":"NFT를 발행하려면 Wallet을 연결해야 합니다.",
+   "presale.li2":"거래는 연결된 지갑을 통해 이루어집니다.",
+   "presale.li3":"거래를 할 때 가스 요금을 지불하려면 KLAYTN이 있어야 합니다.",
+   "presale.li4":"거래당 발행 수는 각 판매 라운드에 따라 설정됩니다.",
+   "presale.2":"1차 사전 판매",
+   "presale.3":"2차 사전 판매",
+   "presale.4":"3차 사전 판매",
+   "presale.price":"가격",
+   "presale.Amount":"양",
+   "presale.Sold":"매진"
 
 }
