--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -177,7 +177,7 @@
    "staking.para41":"The 미친 원숭이 궁예 클럽은 무자비한 폭군이 거주하는 블록체인의 생태계입니다. 10,000 NFT의 제한된 시리즈입니다. $MAGUNI 토큰은 CAGC 생태계를 구동하는 유틸리티입니다.",
    "staking.para42":"말뚝",
    "staking.para43":"이름을 바꿔라",
-   "staking.para44":"약력 변경"
+   "staking.para44":"약력 변경",
 
 
    "FAQ.1": "자주하는 질문",
